# fastapi-autowire

./: .flake8  LICENSE  README.md  pyproject.toml
src/: __main__.py  app.py
